ui details redesign

--- a/themes/metrumy/layouts/index.html
+++ b/themes/metrumy/layouts/index.html
@@ -14,7 +14,7 @@
 
     <section  class="block-top-posts">
       <ul class="post-list post-list--short">
-        <h3 class="post-list--title">Top 3 Posts</h3>
+        <div class="list-title">Top 3 Posts</div>
         <li>
         <a href="https://bart747.github.io/ui-coins/">Learning UI Design from Coins (on Contrast)</a>
         </li>
