--- a/themes/metrumy/layouts/partials/onBlog.html
+++ b/themes/metrumy/layouts/partials/onBlog.html
@@ -1,4 +1,4 @@
 <section  class="wrapper-small block--extra">
-  <h2 class="list-title">Recently on <a href="./blog">Blog</a>:</h2>
+  <div class="list-title">Recently on <a href="./blog">Blog</a>:</div>
   {{ partial "postListShort.html" . }}
 </section>
