--- a/themes/metrumy/layouts/partials/publs.html
+++ b/themes/metrumy/layouts/partials/publs.html
@@ -1,6 +1,6 @@
 <section  class=" ">
   <ul class="post-list post-list--short">
-    <h3 class="post-list--title">Other Publication</h3>
+    <div class="list-title">Other Publication</div>
     <li>
     <a href="https://bart747.github.io/process">On Creative Process</a>
     </li>
