--- a/themes/metrumy/sass/_lists.scss
+++ b/themes/metrumy/sass/_lists.scss
@@ -91,6 +91,11 @@ h3.post-list--post-title {
   margin: 0 0 0.66em;
 }
 
+h2.post-list--home-title {
+  margin: 1.25em 0;
+
+}
+
 .post-list--short .post-list--title {
   font-size: 1em;
   line-height: 1.25;
