--- a/themes/metrumy/sass/_variables.scss
+++ b/themes/metrumy/sass/_variables.scss
@@ -16,14 +16,14 @@ $green:               #118822;
 $green-dark:          #004010;
 $blue:                #2233dd;
 $blue-dark:             darken($blue, 10%);
-$blue-light:          #5577ff;
+$blue-light:          #11aaff;
 $purple:              #5500aa;
 $grey:                #777;
 $grey-light:            lighten($grey, 40%);
 $grey-dark:             darken($grey, 20%);
 
 $yellow:             #ffee66;
-$background-yellow:  #f3e59c;
+$background-yellow:  #ffee99;
 $orange:             #ff6622;
 $orange-light:       #ff9922;
 $orange-deep:        #ee3322;
