ui details redesign

--- a/themes/metrumy/sass/_variables.scss
+++ b/themes/metrumy/sass/_variables.scss
@@ -26,7 +26,7 @@ $yellow:             #ffee66;
 $background-yellow:  #ffee99;
 $orange:             #ff6622;
 $orange-light:       #ff9922;
-$orange-deep:        #ee3322;
+$orange-deep:        #dd3322;
 $night:              #200044;
 
 // sceen sizes
