create patterns library + minor ui redesign

--- a/themes/metrumy/layouts/partials/masthead.html
+++ b/themes/metrumy/layouts/partials/masthead.html
@@ -1,6 +1,7 @@
 
-<section class="masthead">
+<section class="masthead block">
   
-    <h1 class="masthead---title">Searching for Simple Solutions for UI Problems</h1>
+    <h1 class="masthead--title">Searching for Simple Solutions for UI Problems</h1>
+    <h2 class="masthead--subtitle">With Adaptability in Mind</h2>
 
 </section>
