--- a/themes/metrumy/layouts/partials/publs.html
+++ b/themes/metrumy/layouts/partials/publs.html
@@ -1,4 +1,4 @@
-<section  class=" ">
+<section  class="block">
   <ul class="post-list post-list--short">
     <div class="list-title">Other Publication</div>
     <li>
