--- a/themes/metrumy/layouts/partials/postList.html
+++ b/themes/metrumy/layouts/partials/postList.html
@@ -1,4 +1,4 @@
-<div class="post-list">
+<section class="block post-list">
   {{ range (.Paginator 10).Pages }}
     <div class="post-list--post">
       <div class="date secondary"> {{ .Date.Format "Jan 2, 2006" }} </div>
@@ -15,9 +15,9 @@
       {{ end }}
     </div>
   {{ end }}
-</div>
+</section>
 
-<div class="subnav">
+<section class="block subnav">
   {{ if .Paginator.HasPrev }}     
     <a class="next" href="{{ .Paginator.Prev.URL }}">previous page</a>
     &nbsp;
@@ -26,4 +26,4 @@
   {{ if .Paginator.HasNext }}     
     <a class="next" href="{{ .Paginator.Next.URL }}">next page</a>
   {{ end }}
-</div>
+</section>
