--- a/themes/metrumy/sass/_lists.scss
+++ b/themes/metrumy/sass/_lists.scss
@@ -11,6 +11,7 @@ ol li {
 
 .list-title {
   font-weight: bold;
+  line-height: 1.25;
   margin-bottom: 0.5em;
 }
 
@@ -41,11 +42,6 @@ ol li {
 
 .blog--list {
   @include wrapper-mid;
-  padding: 0 1em;
-}
-
-.blog--list .subnav {
-  padding: 0;
 }
 
 .post-list {
@@ -60,6 +56,15 @@ ol li {
   &:last-of-type {
     margin: 0;
   }
+}
+
+.post-list h1 {
+  font-weight: bold;
+  font-size: 1.5em;
+  font-weight: 600;
+  line-height: 1.25;
+  color: $black;
+  margin: 0.66em 0 0.66em;
 }
 
 .post-list h2 {
@@ -77,7 +82,7 @@ ol li {
 }
 
 .post-list--post {  
-  margin: 3em auto;
+  margin: 0 auto 3em;
 }
 
 .post-list--post-title,
