--- a/themes/metrumy/sass/_masthead.scss
+++ b/themes/metrumy/sass/_masthead.scss
@@ -6,14 +6,29 @@
   text-align: center;
 }
 
-.masthead---title {
+.masthead--title {
   font-size: 2.5em;
   line-height: 1;
   letter-spacing: -0.025em;
-  margin: 0.8em 0;
+  margin: 0;
   //text-align: center;
   @media (max-width: $screen-sml) {
-    font-size: 2.5em;
+    font-size: 2em;
+  }
+}
+
+.masthead--subtitle {
+  font-size: 1.25em;
+  font-weight: normal;
+  font-style: italic;
+  line-height: 1.25;
+  letter-spacing: -0.025em;
+  margin: 0.25em 0;
+  text-transform: uppercase;
+  letter-spacing: 0.05em;
+  //text-align: center;
+  @media (max-width: $screen-sml) {
+    font-size: 1em;
   }
 }
 
