fix 'next' and 'prev' links under articles

--- a/themes/metrumy/layouts/partials/article.html
+++ b/themes/metrumy/layouts/partials/article.html
@@ -9,15 +9,15 @@
 
 <section class="subnav">
   <div class="subnav--line">
-    {{ if .Prev }}
+    {{ if .PrevInSection }}
       <div class="subnav--tag">prev: </div>
-      <div><a class="previous" href="{{.Prev.Permalink}}"> {{.Prev.Title}}</a></div>
+      <div><a class="previous" href="{{.PrevInSection.Permalink}}"> {{.PrevInSection.Title}}</a></div>
     {{ end }}
   </div>
   <div class="subnav--line">
-    {{ if .Next }}
+    {{ if .NextInSection }}
       <div class="subnav--tag">next: </div>
-      <div><a class="next" href="{{.Next.Permalink}}"> {{.Next.Title}}</a></div>
+      <div><a class="next" href="{{.NextInSection.Permalink}}"> {{.NextInSection.Title}}</a></div>
     {{ end }}
   </div>
 </section>
