add webpack for 'static'

--- a/themes/metrumy/layouts/partials/head.html
+++ b/themes/metrumy/layouts/partials/head.html
@@ -16,7 +16,7 @@
 
   <!--stylesheets-->
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/css/dist.css">
+  <link rel="stylesheet" type="text/css" href="/css/bundle.css">
 
   <link rel="icon" type="image/png" href="{{ .Site.BaseURL }}/icon152.png" sizes="152x152">
   <link rel="icon" type="image/png" href="{{ .Site.BaseURL }}/icon320.png" sizes="320x320">
