--- a/themes/metrumy/sass/_variables.scss
+++ b/themes/metrumy/sass/_variables.scss
@@ -6,6 +6,8 @@ $small-font-size:       14px;
 $base-line-height:      1.5;
 
 // colors
+$brand-purple:         #7700ff;
+
 $text-color:          #383838;
 $background-color:    #f5f3f1;
 $black:               #222;
