--- a/themes/metrumy/sass/_typography.scss
+++ b/themes/metrumy/sass/_typography.scss
@@ -11,6 +11,13 @@ h4, {
   margin: 0 0 1em;
 }
 
+h1 a,
+h2 a,
+h3 a,
+h4 a {
+  color: $black;
+}
+
 h1, .h1-like {
   font-size: 2em;
   font-weight: bold;
