create 'yes-no' module + minor edits

--- a/themes/metrumy/layouts/_default/patterns.html
+++ b/themes/metrumy/layouts/_default/patterns.html
@@ -15,6 +15,11 @@
 </section>
 
 <section class="patterns--section">
+  <h2 class="patterns--title">yes/no, less/more</h2>
+  {{ partial "yesno.html" . }}
+</section>
+
+<section class="patterns--section">
   <h2 class="patterns--title">article</h2>
   {{ partial "article.html" . }}
 </section>
