--- a/themes/metrumy/sass/_variables.scss
+++ b/themes/metrumy/sass/_variables.scss
@@ -12,9 +12,9 @@ $text-color:          #383838;
 $background-color:    #f5f3f1;
 $black:               #222;
 $white:               #fff;
-$red:                 #dd2222;
+$red:                 #ee1144;
 $red-dark:            #aa2222;
-$green:               #118822;
+$green:               #22aa00;
 $green-dark:          #004010;
 $blue:                #2233dd;
 $blue-dark:             darken($blue, 10%);
