--- a/themes/metrumy/layouts/index.html
+++ b/themes/metrumy/layouts/index.html
@@ -4,6 +4,8 @@
 
 {{ partial "masthead.html" . }}
 
+{{ partial "yesno.html" . }}
+
 <div class="home-main">
   <div class="home-left">
   {{ partial "postListHome.html" . }}
