--- a/themes/metrumy/layouts/partials/postListHome.html
+++ b/themes/metrumy/layouts/partials/postListHome.html
@@ -2,7 +2,7 @@
 <div class="post-list list--home">
   <div class="list-title">Recently on <a  href="{{ .Site.BaseURL }}/blog">Blog</a>:</div>
 
-  {{ range first 5 (where .Data.Pages "Section" "blog") }}  
+  {{ range first 5 (where .Site.Pages "Section" "blog") }}  
       <h2 class="post-list--home-title"><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
   {{ end }}
 
