--- a/themes/metrumy/sass/_base.scss
+++ b/themes/metrumy/sass/_base.scss
@@ -41,13 +41,15 @@ section {
 }
 
 @mixin wrapper-mid {
-  max-width: 35em; 
-  margin: 0 auto;
+  max-width: 640px; 
+  margin-left: auto;
+  margin-right: auto;
 }
 
 @mixin wrapper-big {
-  max-width: 64em; 
-  margin: 0 auto;
+  max-width: 1200px; 
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .wrapper--nopad {
@@ -75,11 +77,7 @@ nav ul {
 
 nav li {
   display: inline-block;
-  margin-right: 1em;
-}
-
-nav li:last-child {
-  margin-right: 0;
+  margin: 0 1em;
 }
 
 .subnav {
@@ -180,6 +178,9 @@ button,
   position: fixed;
   top: 0;
   left: 0;
+  background-color: $background-color;
+  border-radius: 0 0 4px 0;
+  box-shadow: 0 1px 4px $grey-light;
   color: #fff;
   height: 50px;
   width: 50px;
