--- a/themes/metrumy/layouts/index.html
+++ b/themes/metrumy/layouts/index.html
@@ -6,6 +6,8 @@
 
 {{ partial "yesno.html" . }}
 
+{{ partial "homeContent" . }}
+
 <div class="home-main">
   <div class="home-left">
   {{ partial "postListHome.html" . }}
