--- a/themes/metrumy/layouts/partials/homeContent.html
+++ b/themes/metrumy/layouts/partials/homeContent.html
@@ -1,101 +1,62 @@
+<section class="home-content">
 
-<div class="home-content">
-
-<section class="block--extra">
-
-  <section class="block wrapper-small">
-
-    <h2 class=" ">Modularity</h2>
-
-    <p>
-      The most interesting things happen once your software is in the wild and people are using it.
-      That's when you can really see what's working and what to change.
-    </p>
-        
-    <p>
-      When your interface is easy to rearrange &mdash; modular &mdash; you can adjust to the real world
-      without tedious redesigns:
-      <ol>
-        <li>
-          You can <span class="home-highlight">just swap UI modules</span> in an HTML or template file.
-      </li>
-        <li>
-          You can <span class="home-highlight">edit a module that has its own file.</span>
-          No need to dig into complex code that's responsible for many things.
-        </li>
-      </ol>
-    </p>
-
-  </section>
-
-  <section class="block wrapper-small">
-
-    <h2 class=" ">Embrace Foundations</h2>
-
-    <p>
-      If I need to pick between working on something essential  or adding bells and whistles, I pick essentials.
-      It's just hard to be really good at all of them, so why even focus on <i>nice to haves</i>?
-    </p>
-    <p>
-      Working extra on things like <span class="home-highlight">clarity (intuitiveness, readability) and load speed
-      will give you more than any neophiliac thing.</span>
-    </p>
-
-  </section>
-
-
-  <section class="block wrapper-small">
-
-    <h2 class=" ">Simplicity is Tricky</h2>
-
-    <p>
-      It's easy to achieve perceived simplicity and pay for it with real complexity.
-      For instance, you can make a UI that your users will appreciate,
-      but you'll pay severely with code editing difficulties.
-    </p>
-    <p>
-      Real simplicity of an interface means <span class="home-highlight">neat visuals with clear implementation.</span> 
-      To achieve that, you often need to sacrifice some non-crucial features.
-    </p>
-     
-  </section>  
-
-  <section class="block wrapper-small">
-
-    <h2 class=" ">Smooth Interactions</h2>
-    
-    <p>
-      There's overwhelming variety of internet browsing devices on the market.
-      We need to think about what will make the product work
-      <span class="home-highlight">smoothly on a cheap hardware and half-decent wi-fi</span>.
-      People will often use your stuff at train stations, airports and in restaurants.
-    </p>
-    
- 
-  </section>
-
-  <section class="block wrapper-small">
-
-    <h2 class=" ">Words Win</h2>
-    
-    <p>
-      People say “a picture is like 1000 words”.
-      But a picture will not make a proposition as clear and simple as a well designed sentence.
-      That's why I like typography. 
-      <span class="home-highlight">Good typography is a tool to achieve clarity.</span>
-    </p>
- 
-  </section>
-
-</section>
-
-<section class="block wrapper-small">
-  <div class="big-quote">
-    “This site should load slower.”
-    <br>
-    “It's not complicated enough.”
-    <div class="big-quote--name">No One Ever</div>
-  </div>
-</section>
-
+<div class="block-headline">
+  <h2 class="block-headline--title"> It's About Simplicity and Usability</h2>
+  <h3 class="block-headline--subtitle"> It's About Simplicity and Usability</h3>
 </div>
+
+<div class="profile-grid">
+
+  <div class="profile-grid--block">
+  <!--
+    <div class="block-marketing--icon">
+    <svg fill="orange" height="48" viewBox="0 0 24 24" width="48" xmlns="http://www.w3.org/2000/svg">
+        <path d="M0 0h24v24H0z" fill="none"/>
+        <path d="M15.9 5c-.17 0-.32.09-.41.23l-.07.15-5.18 11.65c-.16.29-.26.61-.26.96 0 1.11.9 2.01 2.01 2.01.96 0 1.77-.68 1.96-1.59l.01-.03L16.4 5.5c0-.28-.22-.5-.5-.5zM1 9l2 2c2.88-2.88 6.79-4.08 10.53-3.62l1.19-2.68C9.89 3.84 4.74 5.27 1 9zm20 2l2-2c-1.64-1.64-3.55-2.82-5.59-3.57l-.53 2.82c1.5.62 2.9 1.53 4.12 2.75zm-4 4l2-2c-.8-.8-1.7-1.42-2.66-1.89l-.55 2.92c.42.27.83.59 1.21.97zM5 13l2 2c1.13-1.13 2.56-1.79 4.03-2l1.28-2.88c-2.63-.08-5.3.87-7.31 2.88z"/>
+    </svg>
+    </div>
+  -->
+    <h2 class="block-marketing--title">Faster, Cleaner Interfaces</h2>
+    <!--<h3 class="block-marketing--subtitle">Clear UI with modules</h3>-->
+    <p class="block-marketing--body">
+      Modular UIs are easier to edit in the long run.
+      When your interface is divided into distinct parts,
+      you can also separate chunks of code by following that divisions.
+    </p>
+  </div>
+
+  <div class="profile-grid--block">
+
+    <h2 class="block-marketing--title">Faster, Cleaner Interfaces</h2>
+    <!--<h3 class="block-marketing--subtitle">Clear UI with modules</h3>-->
+    <p class="block-marketing--body">
+      Modular UIs are easier to edit in the long run.
+      When your interface is divided into distinct parts,
+      you can also separate chunks of code by following that divisions.
+    </p>
+  </div>
+
+  <div class="profile-grid--block">
+
+    <h2 class="block-marketing--title">Faster, Cleaner Interfaces</h2>
+    <!--<h3 class="block-marketing--subtitle">Clear UI with modules</h3>-->
+    <p class="block-marketing--body">
+      Modular UIs are easier to edit in the long run.
+      When your interface is divided into distinct parts,
+      you can also separate chunks of code by following that divisions.
+    </p>
+  </div>
+
+  <div class="profile-grid--block">
+
+    <h2 class="block-marketing--title">Faster, Cleaner Interfaces</h2>
+    <!--<h3 class="block-marketing--subtitle">Clear UI with modules</h3>-->
+    <p class="block-marketing--body">
+      Modular UIs are easier to edit in the long run.
+      When your interface is divided into distinct parts,
+      you can also separate chunks of code by following that divisions.
+    </p>
+  </div>
+</div>
+
+</section>
