--- a/themes/metrumy/layouts/partials/yesno.html
+++ b/themes/metrumy/layouts/partials/yesno.html
@@ -1,5 +1,5 @@
 <section class="yesno">
-
+<!--
   <div class="yesno--block block">
     <div class="yesno--title-no">NO to:</div>
 
@@ -27,9 +27,6 @@
     <div class="yesno--title-yes">YES to:</div>
 
     <ul>
-      <li class=" ">
-        optimizing for conversions and product positioning
-      </li>
 
       <li class=" ">
         great 'load speed/visual engagement' balance: 
@@ -40,10 +37,149 @@
       </li>
 
       <li class=" ">
+        optimizing for conversions and product positioning
+      </li>
+
+      <li class=" ">
         modular code: easy to edit/swap/remove containers
       </li>
     </ul>
 
   </div>
+-->
+
+<table class="yesno--table yesno-screen-big">
+  <tbody>
+    <thead>
+      <tr>
+        <th> <div class="yesno--title-no">NO to:</div></th>
+        <th><div class="yesno--title-yes">YES to:</div></th>
+      </tr>
+    </thead>
+
+    <tr>
+      <td>
+        low usability, resource heavy widgets: 
+        <ul>
+          <li>photo carousels</li> 
+          <li>parallax scrolling</li>
+        </ul>
+      </td>
+
+      <td>
+        great 'load speed/visual engagement' balance: 
+        <ul>
+          <li>light animations</li>
+          <li>clear typography</li>
+        </ul>        
+      </td>
+    </tr>
+
+    <tr>
+      <td>
+        many options — no clear goal
+      </td>
+      <td>
+        minimalist UI made with conversions and positioning in mind
+      </td>
+    </tr>
+
+    <tr>
+      <td>
+        convoluted code:<br>hard to edit/swap/remove
+      </td>
+      <td>
+        modular code:<br>easy to edit/swap/remove containers
+      </td>
+    </tr>
+
+    <tr>
+      <td>
+        aesthetics first
+      </td>
+      <td>
+        functionality first (aesthetics second)
+      </td>
+    </tr>
+
+  </tbody>
+</table>
+
+<table class="yesno--table yesno-screen-sml">
+  <tbody>
+    <thead>
+      <tr>
+        <th> <div class="yesno--title-no">NO to:</div></th>
+      </tr>
+    </thead>
+
+    <tr>
+      <td>
+        low usability, resource heavy widgets: 
+        <ul>
+          <li>photo carousels</li> 
+          <li>parallax scrolling</li>
+        </ul>
+      </td>
+    </tr>
+
+    <tr>
+      <td>
+        crowded spaces without strategy
+      </td>
+    </tr>
+
+    <tr>
+      <td>
+        convoluted code:<br>hard to edit/swap/remove
+      </td>
+    </tr>
+
+    <tr>
+      <td>
+        aesthetics first
+      </td>
+    </tr>
+
+  </tbody>
+</table>
+
+<table class="yesno--table yesno-screen-sml">
+  <tbody>
+    <thead>
+      <tr>
+        <th><div class="yesno--title-yes">YES to:</div></th>
+      </tr>
+    </thead>
+
+    <tr>
+      <td>
+        great 'load speed/visual engagement' balance: 
+        <ul>
+          <li>light animations</li>
+          <li>clear typography</li>
+        </ul>        
+      </td>
+    </tr>
+
+    <tr>
+      <td>
+        chunky UI made with conversions and product positioning in mind
+      </td>
+    </tr>
+    <tr>
+      <td>
+        modular code:<br>easy to edit/swap/remove containers
+      </td>
+    </tr>
+
+    <tr>
+      <td>
+        functionality first (aesthetics second)
+      </td>
+    </tr>
+
+  </tbody>
+</table>
 
 </section>
