--- a/themes/metrumy/sass/_base.scss
+++ b/themes/metrumy/sass/_base.scss
@@ -179,7 +179,7 @@ button,
   top: 0;
   left: 0;
   background-color: $background-color;
-  border-radius: 0 0 4px 0;
+  border-radius: 0 0 50% 0;
   box-shadow: 0 1px 4px $grey-light;
   color: #fff;
   height: 50px;
