--- a/themes/metrumy/sass/_yesno.scss
+++ b/themes/metrumy/sass/_yesno.scss
@@ -1,10 +1,29 @@
 .yesno {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
   font-size: 1em;
   margin: 0 auto 5em;
-  max-width: 820px;
+  width: 100%;
+  max-width: 768px;
+  padding: 0 1em;
+}
+
+@media (max-width: $screen-mid) {
+  .yesno-screen-big {
+    display: none;
+  }
+
+  .yesno-screen-sml {
+    display: table;
+  }
+}
+
+@media (min-width: $screen-mid) {
+  .yesno-screen-big {
+    display: table;
+  }
+
+  .yesno-screen-sml {
+    display: none;
+  }
 }
 
 .yesno li {
@@ -13,11 +32,45 @@
 
 .yesno li ul {
   margin-bottom: 0.5em;
+  margin-top: 0.5em;
+}
+
+.yesno--table {
+  border-collapse: collapse; 
+  margin-bottom: 1em;
+}
+
+.yesno--table tr {
+  border-bottom: 1px dotted $grey;
+  &:last-of-type {
+    border-bottom: none;
+  }
+}
+
+.yesno--table.yesno-screen-big  td:first-of-type {
+  padding: 1em 1em 1em 0;
+  width: 50%;
+}
+
+.yesno--table.yesno-screen-big  td:last-of-type {
+  padding: 1em 0 1em 1em;
+  width: 50%;
+}
+
+.yesno--table.yesno-screen-sml  td {
+  padding: 1em 0 1em 0;
+  width: 100%;
+}
+
+.yesno--table li,
+.yesno--table ul {
+  margin-bottom: 0;
+  margin-top: 0;
 }
 
 .yesno--block {
   flex: 1 1 0; 
-  margin: 0 0;
+  margin: 0 0 2em;
   min-width: 16em;
 }
 
@@ -39,5 +92,8 @@
 
 .yesno--title-no {
   background-color: $red;
+}
 
+.yesno-screen-big .yesno--title-yes {
+  margin-left: 1em;
 }
