--- a/themes/metrumy/sass/_base.scss
+++ b/themes/metrumy/sass/_base.scss
@@ -190,9 +190,13 @@ button,
   z-index: 9999;
 }
 
-#svg-logo--path {
+#svg-logo--path,
+#svg-logo--path2,
+#svg-logo--path3 {
   fill: $brand-purple !important;
 }
+
+
 
 a.logo,
 a.logo:active,
@@ -202,6 +206,12 @@ a.logo:hover {
 
 a.logo:hover #svg-logo--path {
   fill: $blue-light !important;
+  transition: fill 0.2s ease-in;
+} 
+
+a.logo:hover #svg-logo--path2,
+a.logo:hover #svg-logo--path3 {
+  fill: #000 !important;
   transition: fill 0.2s ease-in;
 } 
 
