redesign error message

--- a/themes/metrumy/layouts/404.html
+++ b/themes/metrumy/layouts/404.html
@@ -6,8 +6,7 @@
     <h2><span class="orange">Oops!</span><br>
     The page you were looking for isn't here.</h2>
 
-    <p>Maybe it doesn't exist anymore or has been moved.<br>
-      Or maybe the address was typed incorrectly.</p>
+    <p>Maybe it doesn't exist anymore or the address was typed incorrectly.</p>
     
   <br>
    {{ partial "postListShort.html" . }}
