--- a/themes/metrumy/layouts/index.html
+++ b/themes/metrumy/layouts/index.html
@@ -6,7 +6,7 @@
 
 {{ partial "yesno.html" . }}
 
-{{ partial "homeContent" . }}
+<!-- {{ partial "homeContent" . }} -->
 
 <div class="home-main">
   <div class="home-left">
