--- a/themes/metrumy/layouts/partials/postListHome.html
+++ b/themes/metrumy/layouts/partials/postListHome.html
@@ -1,4 +1,4 @@
-<section class="block">
+<section class="block home--post-list">
 
 <div class="list-title">Recently on <a  href="{{ .Site.BaseURL }}/blog">Blog</a>:</div>
 <ul class="post-list list--home">
