--- a/themes/metrumy/sass/_home.scss
+++ b/themes/metrumy/sass/_home.scss
@@ -1,26 +1,12 @@
 .home-main {
   display: block;
   @include wrapper-big;
-  @media screen and (min-width: 64em) {
-    display: flex;
-    justify-content: flex-start;
-  }
+  @include grid-50-50;
 }
 
 .home-left,
 .home-right {
-  @include wrapper-mid;
-}
-
-.home-left {
-  flex-grow: 2;
-  @media screen and (min-width: 64em) {
-    margin-right: 2em;
-  }
-}
-
-.home-right {
-  flex-grow: 1;
+  flex: 1 1 0;
 }
 
 .home-section-title,
@@ -42,7 +28,10 @@ h2.home-section-title {
 }
 
 .block-email {
-  padding: 0 1em;
+  text-align: center;
+  margin: 0 auto;
+  padding: 1em;
+  @include wrapper-mid;
 }
 
 .block-email--title {
