--- a/themes/metrumy/sass/_variables.scss
+++ b/themes/metrumy/sass/_variables.scss
@@ -19,17 +19,19 @@ $green-dark:          #004010;
 $blue:                #2233dd;
 $blue-dark:             darken($blue, 10%);
 $blue-light:          #11aaff;
+$blue-skye:           #ddeeee;
 $purple:              #5500aa;
 $grey:                #777;
 $grey-light:            lighten($grey, 40%);
 $grey-dark:             darken($grey, 20%);
 
-$yellow:             #ffee66;
-$background-yellow:  #ffee99;
-$orange:             #ff6622;
-$orange-light:       #ff9922;
-$orange-deep:        #dd3322;
-$night:              #200044;
+$yellow:              #ffee66;
+$background-yellow:   #ffee99;
+$orange:              #ff6622;
+$orange-light:        #ff9922;
+$orange-deep:         #dd3322;
+$night:               #200044;
+$sand:                #eee6dd;
 
 // sceen sizes
 $screen-big:            1024px;
