--- a/themes/metrumy/sass/_lists.scss
+++ b/themes/metrumy/sass/_lists.scss
@@ -53,7 +53,7 @@ li ul {
 }
 
 .post-list {
-  margin: 0 0 1em;
+  margin: 0;
 }
 
 .post-list > li {
@@ -91,6 +91,9 @@ li ul {
 
 .post-list--post {  
   margin: 0 auto 3em;
+  &:last-of-type {
+    margin-bottom: 1em;
+  }
 }
 
 .post-list--post-title,
@@ -120,6 +123,10 @@ h3.post-list--post-title {
 li.post-list--home-title {
   font-weight: normal;
   margin: 1.33em 0;
+}
+
+.post-list--short {
+  margin-bottom: 0;
 }
 
 .post-list--short .post-list--title {
