blog page redesign

--- a/themes/metrumy/layouts/section/blog.html
+++ b/themes/metrumy/layouts/section/blog.html
@@ -3,8 +3,8 @@
 {{ partial "navbar.html" . }}
 
 <div class="blog--list">
-  <div class="block page--masthead">
-  <h1>Blog</h2>
+  <div class="block page-masthead">
+  <h1 class="page-masthead--title">Blog</h2>
   </div>
   {{ partial "postList.html" . }}
 </div>
