--- a/themes/metrumy/sass/_masthead.scss
+++ b/themes/metrumy/sass/_masthead.scss
@@ -31,3 +31,15 @@
   }
 }
 
+.page-masthead {
+  margin: 1em 0;
+}
+
+.page-masthead--title {
+  font-size: 1.25em;
+  line-height: 1.25;
+  margin: 0;
+  text-transform: uppercase;
+  letter-spacing: 0.05em;
+}
+
