--- a/themes/metrumy/sass/_yesno.scss
+++ b/themes/metrumy/sass/_yesno.scss
@@ -25,8 +25,11 @@
 }
 
 .yesno--table {
-  width: 100%;
   border-collapse: collapse; 
+  max-width: 860px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto; 
 }
 
 .yesno--table tr {
