--- a/themes/metrumy/sass/_variables.scss
+++ b/themes/metrumy/sass/_variables.scss
@@ -6,7 +6,7 @@ $small-font-size:       14px;
 $base-line-height:      1.5;
 
 // colors
-$brand-purple:         #7700ff;
+$brand-purple:        #7700ff;
 
 $text-color:          #383838;
 $background-color:    #f5f3f1;
@@ -20,6 +20,7 @@ $blue:                #2233dd;
 $blue-dark:             darken($blue, 10%);
 $blue-light:          #11aaff;
 $blue-skye:           #ddeeee;
+$aquamarine:          #77ddff;
 $purple:              #5500aa;
 $grey:                #777;
 $grey-light:            lighten($grey, 40%);
