--- a/themes/metrumy/layouts/partials/footer.html
+++ b/themes/metrumy/layouts/partials/footer.html
@@ -27,6 +27,10 @@
     Some rights reserved</a> &mdash; please attribute and link back.
     </small>
 
+<div class="footer--top">
+<a href="{{ .Permalink }}#nav">top</a>
+</div>
+
 </footer>
 
 <script src="/js/dist/bundle.js">
