--- a/themes/metrumy/layouts/partials/postListHome.html
+++ b/themes/metrumy/layouts/partials/postListHome.html
@@ -8,5 +8,5 @@
   {{ end }}
 
 </ul>
-<a class="next" href="{{ .Site.BaseURL }}/blog">All Posts</a>
+<a class="home--post-list--more" href="{{ .Site.BaseURL }}/blog">All Posts</a>
 </section>
