--- a/themes/metrumy/sass/_base.scss
+++ b/themes/metrumy/sass/_base.scss
@@ -60,8 +60,23 @@ section {
   margin-right: auto;
 }
 
-.wrapper--nopad {
+.wrapper--media {
   margin: 0 -1em;
+  max-width: 900px;
+  margin: 0 auto;
+}
+
+.wrapper--media-background {
+  background-color: $black;
+  width: 100%;
+  margin: 0;
+}
+
+.wrapper--media-background-top {
+  background-color: $black;
+  width: 100%;
+  margin: 0;
+  margin-top: -1.5em;
 }
 
 audio,
@@ -75,7 +90,7 @@ video {
 
 nav {
   margin: 0;
-  padding: 0.5em 0.5em 0;
+  padding: 0.5em 0.5em 0.25em;
 }
 
 nav ul {
@@ -177,15 +192,15 @@ button,
   color: $orange;
 }
 
-.logo {
+.nav--logo {
   position: absolute;
   top: 0;
   left: 0;
   background-color: transparent;
   border-radius: 0 0 50% 0;
   color: #fff;
-  height: 50px;
-  width: 50px;
+  height: 45px;
+  width: 45px;
   font-size: 16px;
   line-height: 1;
   margin: 0 2px 2px 0;
@@ -200,15 +215,20 @@ button,
 
 
 
-a.logo,
-a.logo:active,
-a.logo:hover {
+a.nav--logo,
+a.nav--logo:active,
+a.nav--logo:hover {
   border: none;
 }  
 
-a.logo:hover #svg-logo--path {
+a.nav--logo:hover #svg-logo--path {
   fill: $brand-purple !important;
   transition: fill 0.2s ease-in;
 } 
+
+.footer--top {
+  text-align: center;
+  margin: 1em;
+}
 
 
