--- a/themes/metrumy/layouts/partials/article.html
+++ b/themes/metrumy/layouts/partials/article.html
@@ -1,9 +1,24 @@
-<section class="article wrapper-small">
+<section class="article">
 
-  <div class="date secondary"> {{ .Date.Format "Jan 2, 2006" }} </div>
-  <h1 class="article-title">{{ .Title }}</h1>
-  
-  {{ .Content }}
+      {{ if in .Params.categories "video" }}
+        {{ range .Params.video }}
+          <div class="wrapper--media-background-top">
+            <div class="wrapper--media"> 
+              <div class="video">
+                <iframe src="{{ . }}" frameborder="0" allowfullscreen></iframe>
+              </div>
+            </div>
+          </div>
+          
+        {{ end }}
+      {{ end }}
+  <div class="article--narrow">
+    <h1 class="article-title">{{ .Title }}</h1>
+    
+    {{ .Content }}
+    
+    <div class="date secondary"> {{ .Date.Format "Jan 2, 2006" }} </div>
+  </div>
 
 </section>
 
