--- a/themes/metrumy/layouts/partials/navbar.html
+++ b/themes/metrumy/layouts/partials/navbar.html
@@ -1,6 +1,6 @@
-<nav>
+<nav id="nav">
   
-<a class="logo" href="{{ .Site.BaseURL }}">
+<a class="nav--logo" href="{{ .Site.BaseURL }}">
 <svg
   xmlns="http://www.w3.org/2000/svg"
   version="1.1"
@@ -31,4 +31,5 @@
     <a href="{{ .Site.BaseURL }}/blog/">blog</a>
   </li>
 </ul>
+
 </nav>
