--- a/themes/metrumy/layouts/partials/postList.html
+++ b/themes/metrumy/layouts/partials/postList.html
@@ -1,18 +1,37 @@
-<section class="block post-list">
+<section class="post-list">
   {{ range (.Paginator 10).Pages }}
-    <div class="post-list--post">
-      <div class="date secondary"> {{ .Date.Format "Jan 2, 2006" }} </div>
-      <h2 class="post-list--post-title"><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
+    <div class="article post-list--post">
+      <div class="article--narrow">
+        <h2 class="post-list--post-title"><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
+      </div>
 
-      {{ if in .Params.categories "nosummary" }}
-        {{ .Content }}
-      {{ else }}
-        {{ .Summary }}
+      {{ if in .Params.categories "video" }}
+        {{ range .Params.video }}
+          <div class="wrapper--media-background">
+            <div class="wrapper--media"> 
+              <div class="video">
+                <iframe src="{{ . }}" frameborder="0" allowfullscreen></iframe>
+              </div>
+            </div>
+          </div>
+        {{ end }}
       {{ end }}
+      
+      <div class="article--narrow">
 
-      {{ if .Truncated }}
-      <a href="{{ .RelPermalink }}">Continue&#8230;</a>
-      {{ end }}
+        {{ if in .Params.categories "nosummary" }}
+          {{ .Content }}
+        {{ else }}
+          {{ .Summary }}
+        {{ end }}
+
+        {{ if .Truncated }}
+        <div class="post-list--post--continue">
+          <a href="{{ .RelPermalink }}">Continue&#8230;</a>
+        </div>
+        {{ end }}
+        <div class="date secondary"> {{ .Date.Format "Jan 2, 2006" }} </div>
+      </div>
     </div>
   {{ end }}
 </section>
