--- a/themes/metrumy/sass/_home.scss
+++ b/themes/metrumy/sass/_home.scss
@@ -1,6 +1,7 @@
 .home-main {
   display: block;
-  margin-bottom: 3em;
+  margin-top: -1em;
+  margin-bottom: 1em;
   @include wrapper-big;
   @include grid-50-50;
 }
@@ -29,6 +30,8 @@ h2.home-section-title {
 }
 
 .block-email {
+  font-size: 1.5em;
+  line-height: 1.25;
   text-align: center;
   margin: 0 auto;
   padding: 1em;
@@ -105,5 +108,9 @@ h2.home-section-title {
 .block-marketing--body {
   font-weight: normal;
   margin-top: 0;
+}
+
+.home--post-list {
+  padding-bottom: 2em;
 }
 
