--- a/themes/metrumy/sass/_lists.scss
+++ b/themes/metrumy/sass/_lists.scss
@@ -49,7 +49,7 @@ li ul {
 }
 
 .blog--list {
-  @include wrapper-mid;
+  //@include wrapper-mid;
 }
 
 .post-list > li {
@@ -67,21 +67,24 @@ li ul {
   font-weight: 600;
   line-height: 1.25;
   color: $black;
-  margin: 0.66em 0 0.66em;
+  margin-top: 0.66em;
+  margin-bottom: 0.66em;
 }
 
 .post-list h2 {
   font-size: 1.25em;
   font-weight: bold;
   line-height: 1.25;
-  margin: 0.8em 0 0.8em
+  margin-top: 0.8em;
+  margin-bottom: 0.8em;
 }
 
 .post-list h3 {
   font-size: 1em;
   font-weight: bold;
   line-height: 1.5;
-  margin: 1em 0 1em;
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
 
 .post-list--post {  
@@ -99,7 +102,7 @@ h3.post-list--post-title {
   font-weight: 600;
   line-height: 1.25;
   color: $black;
-  margin: 0 0 0.66em;
+  margin-bottom: 0.66em;
 
   & a {
     border-bottom: 2px solid $background-color;
@@ -113,11 +116,11 @@ h3.post-list--post-title {
   margin-bottom: 2em;
 }
 
-
 .post-list--home-title,
 li.post-list--home-title {
   font-weight: normal;
-  margin: 1.25em 0;
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
 
 .post-list--short {
@@ -127,7 +130,7 @@ li.post-list--home-title {
 .post-list--short .post-list--title {
   font-size: 1em;
   line-height: 1.25;
-  margin: 0 0 0.5em;
+  margin-bottom: 0.5em;
 }
 
 
