--- a/themes/metrumy/sass/_masthead.scss
+++ b/themes/metrumy/sass/_masthead.scss
@@ -1,6 +1,5 @@
 
 .masthead {
-  background-color: $aquamarine;
   margin: 2em auto;
   padding: 2em 0;
 }
@@ -35,6 +34,7 @@
 
 .page-masthead {
   margin: 1em 0;
+  @include wrapper-mid;
 }
 
 .page-masthead--title {
