--- a/themes/metrumy/layouts/section/blog.html
+++ b/themes/metrumy/layouts/section/blog.html
@@ -1,7 +1,7 @@
 {{ partial "head.html" . }}
 
 {{ partial "navbar.html" . }}
-{{ partial "masthead.html" . }}
+{{ partial "mastheadMini.html" . }}
 <div class="blog--list">
   <div class="block page-masthead">
   <h1 class="page-masthead--title">Blog</h2>
