--- a/themes/metrumy/layouts/partials/mastheadMini.html
+++ b/themes/metrumy/layouts/partials/mastheadMini.html
@@ -22,6 +22,6 @@
     </svg>
   </a>
   <div class="masthead-mini--content">
-    <h1 class="masthead-mini--title">Searching for Simple Solutions for UI Problems</h1>
+    <h1 class="masthead-mini--title">Searching for Simple Solutions to UI Problems</h1>
   </div>
 </section>
