--- a/themes/metrumy/layouts/404.html
+++ b/themes/metrumy/layouts/404.html
@@ -1,15 +1,16 @@
 {{ partial "head.html" . }}
 {{ partial "navbar.html" . }}
 
-<section class="article">
+<section class="article article--narrow">
     
     <h2><span class="orange">Oops!</span><br>
     The page you were looking for isn't here.</h2>
 
     <p>Maybe it doesn't exist anymore or the address was typed incorrectly.</p>
     
-  <br>
-   {{ partial "postListShort.html" . }}
+    <br>
+    {{ partial "postListShort.html" . }}
+
 </section>
 
 {{ partial "footer.html" . }}
