--- a/themes/metrumy/layouts/partials/head.html
+++ b/themes/metrumy/layouts/partials/head.html
@@ -21,6 +21,8 @@
   <link rel="icon" type="image/png" href="{{ .Site.BaseURL }}/icon152.png" sizes="152x152">
   <link rel="icon" type="image/png" href="{{ .Site.BaseURL }}/icon320.png" sizes="320x320">
 
+  <link rel="manifest" href="/manifest.json">
+
   <meta name="google-site-verification" content="vBPgvbkTPtu2MKsCfMMETSBB-crQhj8AZuJ2JUUF2_0" />
 
 </head>
