change 404 page header

--- a/themes/metrumy/layouts/404.html
+++ b/themes/metrumy/layouts/404.html
@@ -1,5 +1,5 @@
 {{ partial "head.html" . }}
-{{ partial "navbar.html" . }}
+{{ partial "mastheadMini.html" . }}
 
 <section class="article article--narrow">
     
