improve accessibility details add additional touch icon and aria label to logo-link

--- a/themes/metrumy/layouts/partials/mastheadMini.html
+++ b/themes/metrumy/layouts/partials/mastheadMini.html
@@ -1,11 +1,11 @@
 <section class="masthead-mini block">
-  <a class="nav--logo" href="{{ .Site.BaseURL }}">
+  <a class="nav--logo" aria-label="homepage" href="{{ .Site.BaseURL }}">
     <svg
       xmlns="http://www.w3.org/2000/svg"
       version="1.1"
       viewBox="0 0 400 400"
       id="svg-logo">
-
+      <title>logo – link to homepage</title>
       <path
         d="m 110,230.00001 90,119.99998 90,-119.99998 0,-180 -10,0 0,175 -55,75 -35,0 -20,-75 0,-83.27376 0,-32.65874 0,-59.0675 -60,0 z"
         id="svg-logo--path"
