--- a/themes/metrumy/layouts/partials/head.html
+++ b/themes/metrumy/layouts/partials/head.html
@@ -23,6 +23,7 @@
 
   <link rel="icon" type="image/png" href="{{ .Site.BaseURL }}/icon152.png" sizes="152x152">
   <link rel="icon" type="image/png" href="{{ .Site.BaseURL }}/icon320.png" sizes="320x320">
+  <link rel="apple-touch-icon" href="{{ .Site.BaseURL }}/icon320.png">
 
   <link rel="manifest" href="/manifest.json">
 
