--- a/themes/metrumy/sass/_base.scss
+++ b/themes/metrumy/sass/_base.scss
@@ -76,7 +76,12 @@ section {
   background-color: $black;
   width: 100%;
   margin: 0;
-  margin-top: -1.5em;
+  margin-top: -2.75em;
+  padding: 2em 0 0;
+  @media (max-width: $screen-big) {
+    margin-top: -2em;
+    padding: 0;
+  }
 }
 
 audio,
