--- a/themes/metrumy/sass/_masthead.scss
+++ b/themes/metrumy/sass/_masthead.scss
@@ -5,9 +5,11 @@
 }
 
 .masthead-mini {
-  margin: 0 auto 1em;
-  padding: 1em;
+  background-color: $black;
+  margin: 0 auto 3em;
+  padding: 0.66em 1em 0.66em;
   text-align: center;
+  height: 2em;
   @media (max-width: $screen-sml) {
     text-align: left;
   }
@@ -17,6 +19,7 @@
   @include wrapper-big;
   padding: 0 1em;
 }
+
 .masthead--title {
   font-size: 3em;
   line-height: 1;
@@ -29,15 +32,28 @@
 }
 
 .masthead-mini--title {
-  color: $grey;
-  font-size: 1em;
+  color: $background-color;
+  font-size: 0.75em;
   font-weight: normal;
-  color: $grey;
+  line-height: 1;
+  letter-spacing: 0.075em;
+  margin: 0 auto;
+  text-transform: uppercase;
+}
+
+.masthead-mini--title a {
+  color: $background-color;
+  border: none;
+  text-decoration: none;
+  &:hover, :focus {
+    color: $brand-purple;
+  }
+  transition: color 0.2s ease-in;
 }
 
 .masthead--subtitle {
-  font-size: 1.25em;
-  font-weight: normal;
+  font-size: 2em;
+  font-weight: bold;
   line-height: 1.25;
   letter-spacing: -0.025em;
   margin: 0.25em 0;
