--- a/themes/metrumy/sass/main.scss
+++ b/themes/metrumy/sass/main.scss
@@ -6,9 +6,11 @@
   "typography",
   "grid",
   "lists",
+  "images",
   "video",
   "syntaxhl",
   "masthead",
   "yesno",
   "home",
+  "projects",
   "patterns";
