--- a/themes/metrumy/sass/_video.scss
+++ b/themes/metrumy/sass/_video.scss
@@ -6,6 +6,13 @@
 	height: 0;
 	width: 100%;
 	overflow:hidden;
+  background: linear-gradient(45deg, $purple, $orange);
+	&::after {
+    color: #fff;
+    content: 'video';
+    font-size: 14px;
+    padding: 0.25em 0.5em;
+  }
 }
 
 .video iframe {
