--- a/themes/metrumy/sass/_syntaxhl.scss
+++ b/themes/metrumy/sass/_syntaxhl.scss
@@ -1,8 +1,8 @@
   .hll{ background-color: $background-yellow }
   .c  { color: $grey; font-style: italic } /* Comment */
   .err{ color: $red-dark } /* Error */
-  .k  { color: $blue-dark } /* Keyword */
-  .o  { color: $text-color} /* Operator */
+  .k  { color: $purple } /* Keyword */
+  .o { color: $text-color} /* Operator */
   .cm { color: $grey; font-style: italic } /* Comment.Multiline */
   .cp { color: $grey; font-style: italic } /* Comment.Preproc */
   .c1 { color: $grey; font-style: italic } /* Comment.Single */
@@ -27,39 +27,84 @@
   .s  { color: $text-color } /* Literal.String */
   .na { color: $text-color } /* Name.Attribute */
   .nb { color: $text-color } /* Name.Builtin */
-  .nc { color: $blue-dark } /* Name.Class */
-  .no { color: $blue-dark } /* Name.Constant */
-  .nd { color: $blue-dark } /* Name.Decorator */
-  .ni { color: $blue-dark } /* Name.Entity */
-  .ne { color: $blue-dark } /* Name.Exception */
-  .nf { color: $blue-dark } /* Name.Function */
-  .nl { color: $blue-dark } /* Name.Label */
-  .nn { color: $blue-dark } /* Name.Namespace */
+  .nc { color: $purple } /* Name.Class */
+  .no { color: $purple } /* Name.Constant */
+  .nd { color: $purple } /* Name.Decorator */
+  .ni { color: $purple } /* Name.Entity */
+  .ne { color: $purple } /* Name.Exception */
+  .nf { color: $purple } /* Name.Function */
+  .nl { color: $purple } /* Name.Label */
+  .nn { color: $purple } /* Name.Namespace */
   .nt { color: $text-color } /* Name.Tag */
-  .nx { color: $blue-dark }
-  .nv { color: $blue-dark } /* Name.Variable */
+  .nx ,.shl-name { color: $purple }
+  .nv { color: $purple } /* Name.Variable */
   .ow { color: $text-color } /* Operator.Word */
   .w  { color: $grey } /* Text.Whitespace */
   .mf { color: $text-color } /* Literal.Number.Float */
   .mh { color: $text-color } /* Literal.Number.Hex */
   .mi { color: $text-color } /* Literal.Number.Integer */
   .mo { color: $text-color } /* Literal.Number.Oct */
-  .sb { color: $blue-dark } /* Literal.String.Backtick */
-  .sc { color: $blue-dark } /* Literal.String.Char */
-  .sd { color: $blue-dark } /* Literal.String.Doc */
+  .sb { color: $text-color } /* Literal.String.Backtick */
+  .sc { color: $text-color } /* Literal.String.Char */
+  .sd { color: $text-color } /* Literal.String.Doc */
   .s2 { color: $text-color } /* Literal.String.Double */
-  .se { color: $blue-dark } /* Literal.String.Escape */
-  .sh { color: $blue-dark } /* Literal.String.Heredoc */
-  .si { color: $blue-dark } /* Literal.String.Interpol */
-  .sx { color: $blue-dark } /* Literal.String.Other */
+  .se { color: $text-color } /* Literal.String.Escape */
+  .sh { color: $text-color } /* Literal.String.Heredoc */
+  .si { color: $text-color } /* Literal.String.Interpol */
+  .sx { color: $text-color } /* Literal.String.Other */
   .sr { color: $text-color } /* Literal.String.Regex */
-  .s1 { color: $blue-dark } /* Literal.String.Single */
-  .ss { color: $blue-dark } /* Literal.String.Symbol */
+  .s1 { color: $text-color } /* Literal.String.Single */
+  .ss { color: $text-color } /* Literal.String.Symbol */
   .bp { color: $grey } /* Name.Builtin.Pseudo */
   .vc { color: $text-color } /* Name.Variable.Class */
   .vg { color: $text-color } /* Name.Variable.Global */
   .vi { color: $text-color } /* Name.Variable.Instance */
   .il { color: $text-color } /* Literal.Number.Integer.Long */
   .p { color: $grey }
-  .language-html .s { color: $blue-dark }
-  .language-scss .err { color: $blue-dark }
+  .language-html .s { color: $purple }
+  .language-scss .err { color: $purple }
+
+
+//                     //
+// CUSTOM DESCRIPTIONS //
+//                     //
+
+
+.shl-name { color: $purple }
+
+.code--row {
+  display: flex;
+  flex-direction: column;
+  @media (min-width: $screen-sml) {
+    flex-direction: row;
+  }
+}
+
+@mixin code--row--side {
+  width: 100%;
+}
+
+.code {
+  @include monoblock;
+  line-height: 1.4;
+  margin: 2em 0;
+}
+
+.code--row--code {
+  font-family: $monospace;
+  @include code--row--side;
+  min-width: 320px;
+  overflow-x: auto;
+}
+
+.code--row--desc {
+  color: $grey-dark;
+  font-family: $base-font-family;
+  margin-bottom: 0.5em;
+  padding-left: 0.5em;
+  border-left: 2px solid $grey;
+  @media (min-width: $screen-sml) {
+    margin-left: 1.5em;
+  }
+  @include code--row--side;
+}
