minor ui changes

--- a/themes/metrumy/sass/_images.scss
+++ b/themes/metrumy/sass/_images.scss
@@ -2,7 +2,7 @@ img {
 	width: 100%;
 	height: auto;
   min-height: 14px;
-	background: linear-gradient(45deg, $purple, $orange);
+	background: linear-gradient(45deg, $purple, $red-dark);
   &::after {
     color: #fff;
     content: 'image';
