--- a/themes/metrumy/sass/_syntaxhl.scss
+++ b/themes/metrumy/sass/_syntaxhl.scss
@@ -1,7 +1,7 @@
   .hll{ background-color: $background-yellow }
   .c  { color: $grey; font-style: italic } /* Comment */
   .err{ color: $red-dark } /* Error */
-  .k  { color: $purple } /* Keyword */
+  .k  { color: $text-color } /* Keyword */
   .o { color: $text-color} /* Operator */
   .cm { color: $grey; font-style: italic } /* Comment.Multiline */
   .cp { color: $grey; font-style: italic } /* Comment.Preproc */
