--- a/themes/metrumy/sass/_video.scss
+++ b/themes/metrumy/sass/_video.scss
@@ -6,7 +6,7 @@
 	height: 0;
 	width: 100%;
 	overflow:hidden;
-  background: linear-gradient(45deg, $purple, $orange);
+  background: linear-gradient(45deg, $purple, $red-dark);
 	&::after {
     color: #fff;
     content: 'video';
